--- a/maps.css
+++ b/maps.css
@@ -84,7 +84,7 @@ background-color: #ffffff;
 @media screen and (max-width: 600px) {
 .listoflinks {flex-direction: column;}
 .linkcolumn {width: 80%;}
-.pagename {font-size: 40px;}
+.pagename {font-size: 40px; margin-top: 20px; margin-bottom: 10px;}
 .pagestructure {align-items: flex-start;}
 }
 
