--- a/parkunits/parklist.css
+++ b/parkunits/parklist.css
@@ -447,6 +447,11 @@
 
 
 /*--------- Colorado --------------*/
+#amch {
+	top: 45.8%;
+	left: 39.3%;
+}
+
 #beol {
 	top: 45.8%;
 	left: 37.3%;
@@ -722,6 +727,12 @@
 	left: 63.3%;
 }
 
+#neph {
+	top: 40.6%;
+	left: 61%;
+}
+
+
 #pull {
 	top: 31.7%;
 	left: 65.7%;
@@ -976,6 +987,11 @@
 	left: 95.2%;
 }
 
+#neen {
+	top: 22.8%;
+	left: 92.8%;
+}
+
 #sama {  /*--boston--*/
 	top: 37.4%;
 	left: 96.4%;
@@ -993,6 +1009,12 @@
 
 
 /*--------- Michigan--------------*/
+
+#noco{
+	top: 25%;
+	left: 70%;
+}
+
 #isro {
 	top: 11.8%;
 	left: 62.7%;
@@ -1065,6 +1087,11 @@
 #natt {
 	top: 61.9%;
 	left: 63.5%;
+}
+
+#till {
+	top: 62%;
+	left: 62.1%;
 }
 
 #tupe {
@@ -2180,6 +2207,11 @@
 #apis {
 	top: 15.2%;
 	left: 59%;
+}
+
+#iatr {
+	top: 26%;
+	left: 63%;
 }
 
 #sacn {
