--- a/questions/questions.css
+++ b/questions/questions.css
@@ -71,6 +71,7 @@ margin: 0px 30px;
 display: flex;
 width: 100%;
 justify-content: center;
+align-items: center;
 }
 
 .thequestion {
@@ -79,7 +80,7 @@ position: relative;
 overflow: hidden;
 height: 100px;
 width: 100%;
-margin: 50px 0px;
+margin: 30px 0px;
 }
 
 #questionlist {
@@ -142,6 +143,109 @@ animation-timing-function: linear;
   animation-iteration-count: 1;
 animation-timing-function: ease-out;
 }
+
+
+
+
+
+
+/* Flip switch */
+
+
+.flipswitch {
+font-family: "Special Elite", system-ui;
+display: flex;
+justify-content: center;
+position: absolute;
+bottom: 0px;
+width: 100%;
+}
+
+.flipswitch-switch {
+
+}
+.flipswitch-questions {
+font-size: 20px;
+line-height: 34px;
+color: #555;
+margin-left: 16px;
+}
+
+.flipswitchon {}
+.flipswitchoff {pointer-events: none; opacity: 0.3;}
+
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 28px;
+  height: 60px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #1b407d;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #555;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #1b407d;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateY(-32px);
+  -ms-transform: translateY(-32px);
+  transform: translateY(-32px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 28px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
