--- a/questions/questions.css
+++ b/questions/questions.css
@@ -72,6 +72,7 @@ display: flex;
 width: 100%;
 justify-content: center;
 align-items: center;
+margin-bottom: 50px;
 }
 
 .thequestion {
@@ -157,7 +158,7 @@ font-family: "Special Elite", system-ui;
 display: flex;
 justify-content: center;
 position: absolute;
-bottom: 0px;
+bottom: 20px;
 width: 100%;
 }
 
