--- a/guesstheborders/guesstheborders.css
+++ b/guesstheborders/guesstheborders.css
@@ -104,7 +104,13 @@ margin-bottom: 20px;
 
 #StateAnnounce {
   font-weight: bold;
-  display: inline;
+  display: block;
+color: darkblue;
+padding: 10px 20px;
+border: 1px solid darkblue;
+font-size: 1.5em;
+text-align: center;
+margin-bottom: 10px;
 }
 
 .statename {
@@ -317,13 +323,51 @@ padding: 7px 16px;
 
 @media only screen and (max-width: 600px) {
   #GameBoard {
-    padding: 20px;
+    padding: 0px;
     width: 90%;
 flex-direction: column;
   }
 
+#GameOuter {
+margin-top: 20px;
+}
+
+#gamestatus {
+margin-top: 20px;
+padding: 20px;
+margin-bottom: 10px;
+}
+
+.GameAnswer{
+margin-top: -40px;
+}
+
+
 .GameQuestion, .GameAnswer {
   width: 100%;
+}
+
+
+#StateSuggestions {
+width: auto;
+}
+
+
+#HideShowHints, #GiveUpButton, #NewGameButton {
+display: block;
+text-align: center;
+margin: auto;
+width: 100%;
+max-width: 300px;
+}
+
+#HideShowHints, #GiveUpHolder, #NewGameHolder {
+display: block;
+margin-bottom: 10px;
+}
+
+#StrikesHolder {
+margin-bottom: 20px;
 }
 
 
