--- a/guesstheborders/guesstheborders.css
+++ b/guesstheborders/guesstheborders.css
@@ -187,6 +187,10 @@ margin-bottom: 10px;
   animation: popIn 0.6s ease;
 }
 
+.StateMissed{
+margin-top: 1px;
+}
+
 .StateIncorrect {
   font-weight: bold;
   animation: popOut 0.3s;
@@ -248,7 +252,7 @@ font-size: .8em;
 align-items: center;
 }
 
-#GiveUpYes, #GiveUpNo, #NewGameYes, #NewGameNo,
+#GiveUpYes, #GiveUpNo, #NewGameYes, #NewGameNo
 {
   margin-left: 10px;
 
