--- a/guesstheborders/guesstheborders.css
+++ b/guesstheborders/guesstheborders.css
@@ -52,6 +52,10 @@ cursor: pointer;
 background-color: #efefef;
 }
 
+.buttonactive {
+background-color: #efefef;
+}
+
 /*-------------------------------------
   PAGE STRUCTURE
 -------------------------------------*/
