--- a/maps.css
+++ b/maps.css
@@ -1,13 +1,13 @@
 
 
 body {
-	font-family: 'Patrick Hand SC', cursive;
-	font-size: 30px;
+  font-family: "Outfit", sans-serif;
+	font-size: 20px;
 	background-color: #f0f0e1;
 	border: 0px solid red;
 	margin: 0px;
 	padding: 0px;
-	line-height: 30px;
+	line-height: 20px;
 }
 
 
@@ -26,17 +26,16 @@ color: #1b407d;
 
 .pagestructure > div {
 width: 100%;
-max-width: 800px;
+max-width: 1000px;
 border: 0px solid blue;
 }
 
 .pagename {
-font-family: 'Orelega One', cursive;
+font-family: "Atma", system-ui;
 text-align: center;
-font-size: 60px;
+font-size: 3em;
 display: block;
-line-height: 60px;
-margin-bottom: 30px;
+margin-bottom: 50px;
 text-transform: lowercase; 
 }
 
@@ -45,13 +44,13 @@ text-transform: lowercase;
 .listoflinks {
 display: flex;
 width: 100%;
-max-width: 800px;
+max-width: 1000px;
 border: 0px solid red;
 }
 
 .linkcolumn {
 margin: 30px;
-width: 50%;
+width: 30%;
 }
 
 .linkcolumn > div {
@@ -59,14 +58,17 @@ width: 50%;
 }
 
 .smalltext {
-font-size: 18px;
-line-height: 18px;
+font-size: .7em;
+line-height: 1em;
 }
 
 .sectiontitle {
-font-family: 'Orelega One', cursive;
+  font-family: "Outfit", sans-serif;
 border-bottom: 2px solid #1b407d;
 margin-bottom: 10px;
+font-weight: bold;
+font-size: 1.2em;
+padding-bottom: 2px;
 }
 
 .linkcolumn a {
@@ -83,8 +85,8 @@ background-color: #ffffff;
 
 @media screen and (max-width: 600px) {
 .listoflinks {flex-direction: column;}
-.linkcolumn {width: 80%;}
-.pagename {font-size: 40px; margin-top: 20px; margin-bottom: 10px;}
+.linkcolumn {width: 80%; margin: 20px auto;}
+.pagename {font-size: 2.5em; margin-top: 40px; margin-bottom: 40px;}
 .pagestructure {align-items: flex-start;}
 }
 
